<resources>
    <string name="app_name">American Football</string>
    <string name="team_a">Team A</string>
    <string name="_0">0</string>
    <string name="_6_points">+6 POINTS</string>
    <string name="_3_points">+3 POINTS</string>
    <string name="_2_points">+2 POINTS</string>
    <string name="_1_points">+1 POINTS</string>
    <string name="team_b">Team B</string>
    <string name="_0_b">0</string>
    <string name="_6_points_b">+6 POINTS</string>
    <string name="_3_points_b">+3 POINTS</string>
    <string name="_2_points_b">+2 POINTS</string>
    <string name="_1_points_b">+1 POINTS</string>
    <string name="reset">reset</string>

</resources>
